--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-debug="true" // Enable debug mode. (!!! NOT RECOMMENDED FOR PRODUCTION ENVIRONMENTS !!!)
-port="4444" // Port to listen on. (Default is 4444)
-db="main.db" // Database file name. (Default is main.db)
-reqemail="true" // Require email to register. (Default is true)
-boxes="60" // Number of boxes that each user can use, 30 for Pokemon Bank, 60 for Pokemon Home. (Default is 60)
-admintoken="" // Admin token, leave empty to disable the admin API endpoint (/api/admin)
+debug="true" # Enable debug mode. (!!! NOT RECOMMENDED FOR PRODUCTION ENVIRONMENTS !!!) (Default is false)
+port="4444" # Port to listen on. (Default is 4444)
+db="main.db" # Database file name. (Default is main.db)
+reqemail="true" # Require email to register. (Default is true)
+boxes="60" # Number of boxes that each user can use, 30 for Pokemon Bank, 60 for Pokemon Home. (Default is 60)
+admintoken="" # Admin token, leave empty to disable the admin API endpoint (/api/admin)
+githubtester="false" # Enable GitHub Dependabot tester mode. (!!! THIS WILL ALWAYS CLOSE BISMUTH ON LAUNCH IF SET TO TRUE !!!) (Default is false)
